# mkdocs_include_stubs_plugin

./: .gitattributes  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/include_configuration_stubs/: __init__.py  cli.py  config.py  logging.py  plugin.py  utils.py
src/include_configurations/: __init__.py  cli.py  gitutils.py  plugin.py  utils.py
src/include_stubs/: __init__.py  _version.py  cli.py  config.py  plugin.py  utils.py
src/mkdocs_include_configurations/: __init__.py  plugin.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_logging.py  test_plugin.py  test_utils.py
